Apps 630/Fix Color Contrast Errors in Ursus (#1054)
* Color contrast

* Color contrast

* Color contrast

* Update color contrast

* Update navbar brand colors

* fix stylelint errors

* fix stylelint errors

--- a/app/assets/stylesheets/theme_ursus/header/_ur-navbar.scss
+++ b/app/assets/stylesheets/theme_ursus/header/_ur-navbar.scss
@@ -1,14 +1,14 @@
 .site-navbar--ursus {
-  background-color: $ucla-blue;
+  background-color: #0b6ab7;
 }
 
 .site-navbar__beta-logo {
   position: relative;
   top: 0.4rem;
   left: 0.4rem;
-  font-size: $text-20;
+  font-size: 1.25rem;
   font-weight: $font-bold;
-  color: $ucla-gold;
+  color: #ffe92e;
   letter-spacing: 0.05rem;
 
   @media (max-width: 575px) {
